--- a/.editorconfig
+++ b/.editorconfig
@@ -11,10 +11,10 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = tab
+indent_style = tab #space
 indent_size = 4
 
-[{.jshintrc,*.json,*.yml}]
+[{.jshintrc,*.json,*.yml,*.js, *.cljs}]
 indent_style = space
 indent_size = 2
 
