--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "require-dev": {
     "10up/wp_mock": "~0.4",
-    "phpunit/phpunit": "^9.5.2"
+    "phpunit/phpunit": "~9.1.1"
   },
   "autoload": {
     "psr-4": {
