--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "packages-update": "wp-scripts packages-update"
   },
   "dependencies": {
-    "@wordpress/api-fetch": "^3.21.5",
-    "@wordpress/block-editor": "^5.2.8",
-    "@wordpress/blocks": "^7.0.4",
-    "@wordpress/components": "^12.0.7",
-    "@wordpress/compose": "^3.24.4",
-    "@wordpress/i18n": "^3.18.0",
-    "downshift": "6.1.0"
+    "@wordpress/api-fetch": "~3.21.5",
+    "@wordpress/block-editor": "~5.2.8",
+    "@wordpress/blocks": "~7.0.4",
+    "@wordpress/components": "~12.0.7",
+    "@wordpress/i18n": "~3.18.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "^13.0.3"
